# rorbuild

./: .gitignore  BUILDING.md  BUILDING.txt  README.md  README.txt  build.bat  build.py  build_osx.py
files/: wget_all.command
patches/: SocketW.diff
patches/Ogre/: CMakeCache.txt  CMakeLists.txt  OgreOSXCocoaWindow.mm.diff
patches/RoR/: CMakeDependenciesConfig.txt  CMakeDependenciesConfig.txt.old.txt  CMakeLists.txt  CMakeMacros.txt
patches/RoR/source/configurator/: CMakeLists.txt
patches/RoR/source/main/: CMakeLists.txt  CMakeLists.txt.new.txt
patches/osx_10.9/OIS/: cocoa.diff
patches/osx_10.9/OIS/OIS.xcodeproj/: project.pbxproj  project.pbxproj.rej
patches/osx_10.9/OIS/OIS.xcodeproj/project.xcworkspace/xcuserdata/asa.xcuserdatad/: UserInterfaceState.xcuserstate
pyBuilder/: AngelScriptBuilder.py  BoostBuilder.py  CaelumBuilder.py  CurlBuilder.py  MoFileReaderBuilder.py  MyGUIBuilder.py  OISBuilder.py  Ogre191Builder.py  OgreBuilder.py  OgreDeps191Builder.py  OgreDepsBuilder.py  OgreDynamicBuilder.py  OpenALBuilder.py  PThreadBuilder.py  PagedGeometryBuilder.py  RoRBuilder.py  SocketWBuilder.py  WTCW.py  WxWidgetsBuilder.py  __init__.py  config.py  pyBuilder.py
